Fixed home page on small screen and added placeholder content to HPC page

--- a/main.css
+++ b/main.css
@@ -29,3 +29,12 @@ li {
     margin-right: auto;
 }
 
+.reverse {
+    flex-direction: row-reverse;
+}
+
+.fontpageimg {
+    padding-top:1em;
+    padding-bottom: 2em;
+}
+
